--- a/bike-app-backend/package.json
+++ b/bike-app-backend/package.json
@@ -17,6 +17,7 @@
     "csvtojson": "^2.0.10",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mathjs": "^11.8.0",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22"
   }
