--- a/bike-app-backend/package.json
+++ b/bike-app-backend/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "mathjs": "^11.8.0",
     "mongoose": "^7.0.3",
+    "mongoose-paginate-v2": "^1.7.1",
     "nodemon": "^2.0.22"
   }
 }
