--- a/bike-app-frontend/package.json
+++ b/bike-app-frontend/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
+    "chart.js": "^4.3.0",
     "deck.gl": "^8.9.7",
     "mapbox-gl": "^2.14.1",
     "maplibre-gl": "^2.4.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.0.23",
     "react-router-dom": "^6.10.0",
