--- a/bike-app-backend/package.json
+++ b/bike-app-backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watchAll",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
@@ -17,10 +17,12 @@
     "csvtojson": "^2.0.10",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jest": "^29.5.0",
     "mathjs": "^11.8.0",
     "moment": "^2.29.4",
     "mongoose": "^7.0.3",
     "mongoose-paginate-v2": "^1.7.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3"
   }
 }
